--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-body {
-  background-color: blue;
+img{
+    width: 100%;
 }
-
-body p {
-  font-weight: bold;
-}
-/*# sourceMappingURL=main.css.map */
