--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,44 @@
-img{
-    width: 100%;
+body{
+    margin: 1.5em;
+    font-size: 25px;
+    font-family: 'poppins', sans-serif;
 }
+
+a{
+    text-decoration: none;
+    font-size: 1.3rem;
+}
+
+.hero-image{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    background: url('../images/Shoe\ 1.jpg');
+    background-size: cover;
+    background-position-x: 20%;
+    background-position-y: 20%;
+    height:100vh;
+    width: 100%;
+    z-index: -1;
+    /* overflow: hidden; */
+}
+
+.logo{
+    color: white;
+    font-weight: bold;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+
+    svg{
+        margin-top: .6em;
+        
+    }
+}
+
+nav{
+    display: none;
+}
+
