Modifed svg after inability to nest in CSS file

--- a/css/main.css
+++ b/css/main.css
@@ -28,17 +28,18 @@ a{
     font-weight: bold;
 }
 
+nav{
+    display: none;
+}
+
 header{
     display: flex;
     justify-content: space-between;
-
-    svg{
-        margin-top: .6em;
-        
-    }
 }
 
-nav{
-    display: none;
+.menu{
+    width: 2em;
+    margin-top: -.6em;
+    cursor: pointer;
 }
 
