--- a/css/main.css
+++ b/css/main.css
@@ -1,80 +1,98 @@
-body{
-    margin: 1.5em;
-    font-size: 25px;
-    font-family: 'poppins', sans-serif;
+body {
+  margin: 1.5em;
+  font-size: 25px;
+  font-family: 'poppins', sans-serif;
 }
 
-a{
-    text-decoration: none;
-    font-size: 1.3rem;
+a {
+  text-decoration: none;
+  font-size: 1.3rem;
 }
 
-.hero-image{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    background: url('../images/Shoe\ 1.jpg');
-    background-size: cover;
-    background-position-x: 20%;
-    background-position-y: 20%;
-    height:100vh;
-    width: 100%;
-    z-index: -1;
-    /* overflow: hidden; */
+.hero-image {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  background: url("../images/Shoe 1.jpg");
+  background-size: cover;
+  background-position-x: 20%;
+  background-position-y: 20%;
+  height: 100vh;
+  width: 100%;
+  z-index: -1;
+  /* overflow: hidden; */
 }
 
-.logo{
-    color: white;
-    font-weight: bold;
+.logo {
+  color: white;
+  font-weight: bold;
 }
 
-nav{
-    position: fixed;
-    right: 0;
-    top: 0;
-    background: white;
-    height: 100vh;
-    width: 50%;
-    z-index: 999;
-    text-transform: uppercase;
+nav {
+  position: fixed;
+  right: 0;
+  top: 0;
+  background: white;
+  height: 100vh;
+  width: 50%;
+  z-index: 999;
+  text-transform: uppercase;
 }
 
-
-
-header{
-    display: flex;
-    justify-content: space-between;
+nav ul {
+  list-style-type: none;
+  padding: 0%;
+  margin-top: 8em;
 }
 
-.menu{
-    width: 3em;
-    margin-top: -.6em;
-    cursor: pointer;
+nav ul a {
+  color: black;
+  padding: .75em 2em;
+  display: block;
 }
 
-h1{
-    font-size: 3rem;
-    margin-top: 2em;
-    line-height: 3.3rem;
+nav ul a:hover {
+  background: #ebebeb;
 }
 
-.sub-head{
-    font-size: 1.4rem;
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-section.hero{
-    color: white;
-    height: 90vh;
+header svg {
+  width: 3em;
+  margin-top: -.6em;
+  cursor: pointer;
 }
 
-.down-arrow{
-    stroke: white;
-    position: absolute;
-    width: 1em;
-    bottom: 2em;
+h1 {
+  font-size: 3rem;
+  margin-top: 2em;
+  line-height: 3.3rem;
 }
 
-path{
-    fill: white;
+.sub-head {
+  font-size: 1.4rem;
 }
 
+section.hero {
+  color: white;
+  height: 90vh;
+}
+
+section.hero .down-arrow {
+  stroke: white;
+  position: absolute;
+  width: 1em;
+  bottom: 2em;
+}
+
+path {
+  fill: white;
+}
+/*# sourceMappingURL=main.css.map */
