Finishing the Mobile CSS

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,12 @@ nav {
   width: 50%;
   z-index: 999;
   text-transform: uppercase;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform .5s ease-in-out;
+  transition: -webkit-transform .5s ease-in-out;
+  transition: transform .5s ease-in-out;
+  transition: transform .5s ease-in-out, -webkit-transform .5s ease-in-out;
 }
 
 nav ul {
@@ -94,5 +100,21 @@ section.hero .down-arrow {
 
 path {
   fill: white;
+}
+
+.more-info img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 11em;
+}
+
+.more-info .title {
+  font-weight: bold;
+  font-size: 1.25rem;
+}
+
+.more-info .desc {
+  line-height: 1.5rem;
 }
 /*# sourceMappingURL=main.css.map */
