--- a/css/main.scss
+++ b/css/main.scss
@@ -37,6 +37,8 @@ nav{
     width: 50%;
     z-index: 999;
     text-transform: uppercase;
+    transform: translateX(100%);
+    transition: transform .5s ease-in-out;
 
     ul{
         list-style-type: none;
@@ -92,3 +94,19 @@ path{
     fill: white;
 }
 
+.more-info {
+    img{
+        width: 100%;
+        object-fit: cover;
+        height: 11em;
+    }
+
+    .title{
+        font-weight: bold;
+        font-size: 1.25rem;
+    }
+
+    .desc{
+        line-height: 1.5rem;
+    }
+}
