--- a/css/main.scss
+++ b/css/main.scss
@@ -118,3 +118,84 @@ path{
     }
 } 
 
+@media only screen and (min-width: 920px) {
+    .menu{
+       display: none; 
+    }
+
+    nav{
+        transform: translateX(0);
+        position: unset;
+        display: block;
+        width: auto;
+        height: auto;
+        background: none;
+
+        svg.close{
+            display: none;
+        }
+
+        ul{
+            display: flex;
+            margin: 0;
+
+            a{
+                color: white;
+                padding: .5em 1.5em;
+                font-size: .9rem;
+
+                &:hover{
+                    background: none;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    .hero-image{
+        left: unset;
+        right: 0;
+        width: 50%;
+        height: 30em;
+    }
+
+    .logo{
+        color: black;
+
+        span{
+            color: red;
+        }
+    }
+
+    section.hero{
+        color: black;
+        height: auto;
+        width: 40%;
+        margin-bottom: 8em;
+
+        svg.down-arrow{
+            stroke: black;
+            position: unset;
+
+            path{
+                fill: black;
+            }
+        }
+    }
+
+    .features {
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        gap: 3em;
+        margin-bottom: 8em;
+
+        img{
+            width: 25em;
+        }
+
+        .content{
+            text-align: right;
+            width: 25em;
+        }
+    }
+} 
