--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@ path {
   section.hero svg.down-arrow path {
     fill: black;
   }
-  .features {
+  .feature {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (auto)[2];
@@ -189,12 +189,31 @@ path {
     gap: 3em;
     margin-bottom: 8em;
   }
-  .features img {
+  .feature img {
     width: 25em;
   }
-  .features .content {
+  .feature .content {
     text-align: right;
     width: 25em;
+  }
+  .feature.Left {
+        grid-template-areas: left-right;
+  }
+  .feature.Left img {
+    grid-area: left;
+  }
+  .feature.Left .content {
+    text-align: left;
+    width: 25em;
+    -ms-grid-column-align: left;
+        justify-self: left;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .wrapper {
+    width: 1200px;
+    margin: 0 auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
