--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@ a {
   height: 100vh;
   width: 100%;
   z-index: -1;
+  -webkit-animation: introload 2s forwards;
+          animation: introload 2s forwards;
   /* overflow: hidden; */
 }
 
@@ -214,6 +216,9 @@ path {
   .wrapper {
     width: 1200px;
     margin: 0 auto;
+  }
+  .feature {
+    gap: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
