--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@ a{
     height:100vh;
     width: 100%;
     z-index: -1;
+    animation: introload 2s forwards;
     /* overflow: hidden; */
 }
 
@@ -219,5 +220,9 @@ path{
     .wrapper{
         width: 1200px;
         margin: 0 auto;
+    }
+
+    .feature{
+        gap: 0;
     }
 }
