--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,6 @@ a {
   height: 100vh;
   width: 100%;
   z-index: -1;
-  -webkit-animation: introload 2s forwards;
-          animation: introload 2s forwards;
   /* overflow: hidden; */
 }
 
@@ -191,7 +189,7 @@ path {
     gap: 3em;
     margin-bottom: 8em;
   }
-  .feature img {
+  .feature .image-wrapper {
     width: 25em;
   }
   .feature .content {
