--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ nav {
 nav ul {
   list-style-type: none;
   padding: 0%;
-  margin-top: 8em;
+  margin-top: 4em;
 }
 
 nav ul a {
@@ -63,6 +63,11 @@ nav ul a:hover {
   background: #ebebeb;
 }
 
+nav .close {
+  background-color: blue;
+  margin-top: 1em;
+}
+
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -73,7 +78,7 @@ header {
 }
 
 header svg {
-  width: 3em;
+  width: 2em;
   margin-top: -.6em;
   cursor: pointer;
 }
@@ -86,6 +91,7 @@ h1 {
 
 .sub-head {
   font-size: 1.4rem;
+  font-weight: bold;
 }
 
 section.hero {
@@ -125,6 +131,11 @@ path {
   line-height: 1.5rem;
 }
 
+.open-nav {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
 @media only screen and (min-width: 680px) {
   body {
     margin: 1.5em 5em;
@@ -134,6 +145,9 @@ path {
 
 @media only screen and (min-width: 920px) {
   .menu {
+    display: none;
+  }
+  .close {
     display: none;
   }
   .more-info {
@@ -149,7 +163,8 @@ path {
     background: none;
   }
   nav svg.close {
-    display: none;
+    display: block;
+    color: red;
   }
   nav ul {
     display: -webkit-box;
